# questions-answers-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
migrations/: env.py
migrations/versions/: 82dc508770a1_initial.py
src/questions_answers_api/: main.py
src/questions_answers_api/api/: __init__.py  answers.py  questions.py
src/questions_answers_api/core/: database.py
src/questions_answers_api/models/: answer.py  question.py
src/questions_answers_api/repositories/: __init__.py  answer_repository.py  question_repository.py
src/questions_answers_api/schemas/: __init__.py  answer.py  question.py
src/questions_answers_api/services/: __init__.py  answer_service.py  question_service.py
tests/: conftest.py  test_answers.py  test_integration.py  test_questions.py  test_schemas.py
